add sassc-rails gem and update project configuration for erb files formatting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,6 @@
     "kaiwood.endwise",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "shopify.ruby-lsp"
+    "aliariff.vscode-erb-beautify"
   ]
 }
