--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-  username: <%= ENV["BOOKSCAPE_DATABASE_USERNAME"] %>
-  password: <%= ENV["BOOKSCAPE_DATABASE_PASSWORD"] %>
+  host: <%= ENV["DB_HOST"] %>
+  port: <%= ENV["DB_PORT"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 development:
   <<: *default
-  database: Bookscape_development
+  database: <%= ENV["POSTGRES_DB"] %>
 
 test:
   <<: *default
-  database: Bookscape_test
+  # database: bookscape_test
+  database: <%= ENV["POSTGRES_DB"] + '_test' %>
 
 
 production:
   <<: *default
-  database: Bookscape_production
-  url: <%= ENV["DATABASE_URL"] %>
+  database: <%= ENV["POSTGRES_DB"] %>
