add ruby-lsp and remove solargraph

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
-    "castwide.solargraph",
+    "Shopify.ruby-lsp",
     "kaiwood.endwise",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
