--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,23 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-  username: <%= ENV["BOOKSCAPE_DATABASE_USERNAME"] %>
-  password: <%= ENV["BOOKSCAPE_DATABASE_PASSWORD"] %>
+  host: <%= ENV.fetch("DB_HOST", "localhost") %>
+  port: <%= ENV.fetch("DB_PORT", 5432) %>
+
+  username: <%= ENV["DB_USER"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
+  database: <%= ENV["DB_NAME"] %>
 
 development:
   <<: *default
-  database: Bookscape_development
 
 test:
   <<: *default
-  database: Bookscape_test
+  database: <%= ENV["DB_NAME"] %>_test
 
 
 production:
   <<: *default
-  database: Bookscape_production
-  url: <%= ENV["DATABASE_URL"] %>
+  url: <%= ENV["DB_URL="] %>
