--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,19 @@
 /config/master.key
 .env
 .byebug_history
+
+# Ignore all environment files (except templates).
+/.env*
+!/.env*.erb
+
+# Ignore storage (uploaded files in development and any SQLite databases).
+/storage/*
+!/storage/.keep
+/tmp/storage/*
+!/tmp/storage/
+!/tmp/storage/.keep
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
