update home page layout

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
+!/.env.example
 
 # Ignore storage (uploaded files in development and any SQLite databases).
 /storage/*
